full authentification process using firebase realtime database

--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-firebase-auth"
+    }
+  },
+  "defaultProject": "angular-firebase-auth",
+  "cli": {
+    "analytics": false
+  }
 }
